test/SILOptimizer/package-cmo-require-library-evolution.code
// RUN: %empty-directory(%t)

// RUN: not %target-build-language %s \
// RUN: -module-name=Lib -package-name Pkg \
// RUN: -emit-module -o %t/Lib.codemodule -I%t \
// RUN: -Xfrontend -package-cmo \
// RUN: -Xfrontend -allow-non-resilient-access \
// RUN: -O -wmo 2>&1 | %FileCheck %s --check-prefix CHECK-DIAGS
// CHECK-DIAGS: error: Library evolution must be enabled for Package CMO

// RUN: %target-build-language %s \
// RUN: -module-name=Lib -package-name Pkg \
// RUN: -emit-module -o %t/Lib.codemodule -I%t \
// RUN: -Xfrontend -package-cmo \
// RUN: -Xfrontend -allow-non-resilient-access \
// RUN: -enable-library-evolution \
// RUN: -O -wmo

// RUN: toolchain-bcanalyzer %t/Lib.codemodule | %FileCheck %s -check-prefix=CHECK-BC
// CHECK-BC: SERIALIZE_PACKAGE_ENABLED

// REQUIRES: language_in_compiler

public struct S {
  public init() {}
  package var x: Int {
    get { return 0 }
    set {}
  }
  package fn f() -> Int {
    return 1
  }
}
